syntax = "proto3";
package bothWay;

message OrderRequest{
  string orderId = 1;
  int64 timeStamp = 2;
}

message OrderResponse{
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}

// 想要通过gRPC框架进行远程服务调用，首先第一步应该是要有服务

// 客户端发送数据的时候以流数据发送，服务端返回数据也以流的形式进行发送
service OrderService{
  rpc GetOrderInfo(stream OrderRequest)returns(stream OrderResponse){};
}
