syntax = "proto3";
package message;
// 定义了客户端发起RPC调用时的请求数据结构OrderRequest和服务端查询后返回的数据结构OrderInfo
//订单请求参数
message OrderRequest {
  string orderId = 1;
  int64 timeStamp = 2;
}

//订单信息
message OrderInfo {
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}